rename app to 'Pomo To-do Timer!'

--- a/pomodoro-todo/index.html
+++ b/pomodoro-todo/index.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Pomodoro To-Do</title>
+    <title>Pomo To-Do Timer!</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1 class="title">Pomodoro To-Do</h1>
+    <h1 class="title">Pomo To-Do Timer!</h1>
 
     <!-- Theme Toggle Button -->
     <label class="switch" title="Toggle theme">
